// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TodoScreen Renders completed todo 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "paddingHorizontal": 16,
        "paddingVertical": 24,
      },
    ]
  }
>
  <TextInput
    onChangeText={[MockFunction]}
    style={
      Object {
        "borderBottomColor": "#aaa",
        "borderBottomWidth": 1,
        "paddingBottom": 8,
      }
    }
    testID="edit"
    value="text"
  />
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginTop": 16,
      }
    }
  >
    <View>
      <View
        accessibilityRole="button"
        accessible={true}
        collapsable={false}
        focusable={true}
        nativeID="animatedComponent"
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="delete"
      >
        <View
          style={
            Array [
              Object {},
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#007AFF",
                  "fontSize": 18,
                  "margin": 8,
                  "textAlign": "center",
                },
                Object {
                  "color": "#CC0000",
                },
              ]
            }
          >
            todo:delete
          </Text>
        </View>
      </View>
    </View>
    <View>
      <View
        accessibilityRole="button"
        accessible={true}
        collapsable={false}
        focusable={true}
        nativeID="animatedComponent"
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="toggle"
      >
        <View
          style={
            Array [
              Object {},
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#007AFF",
                  "fontSize": 18,
                  "margin": 8,
                  "textAlign": "center",
                },
              ]
            }
          >
            todo:reopen
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`TodoScreen Renders incomplete todo 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "paddingHorizontal": 16,
        "paddingVertical": 24,
      },
    ]
  }
>
  <TextInput
    onChangeText={[MockFunction]}
    style={
      Object {
        "borderBottomColor": "#aaa",
        "borderBottomWidth": 1,
        "paddingBottom": 8,
      }
    }
    testID="edit"
    value="text"
  />
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginTop": 16,
      }
    }
  >
    <View>
      <View
        accessibilityRole="button"
        accessible={true}
        collapsable={false}
        focusable={true}
        nativeID="animatedComponent"
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="delete"
      >
        <View
          style={
            Array [
              Object {},
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#007AFF",
                  "fontSize": 18,
                  "margin": 8,
                  "textAlign": "center",
                },
                Object {
                  "color": "#CC0000",
                },
              ]
            }
          >
            todo:delete
          </Text>
        </View>
      </View>
    </View>
    <View>
      <View
        accessibilityRole="button"
        accessible={true}
        collapsable={false}
        focusable={true}
        nativeID="animatedComponent"
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="toggle"
      >
        <View
          style={
            Array [
              Object {},
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#007AFF",
                  "fontSize": 18,
                  "margin": 8,
                  "textAlign": "center",
                },
              ]
            }
          >
            todo:complete
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
